# scramblebench

./: .gitignore  .pre-commit-config.yaml  .repomixignore  CHANGELOG.md  CLEANUP_REPORT.md  LICENSE  README.md  README_EVALUATION.md  RELEASE_PREPARATION_SUMMARY.md  RELEASE_READY_REPORT.md  TODO.md  alembic.ini  alembic_models.py  install-s8-deps.sh  license-header.txt  pyproject.toml  pytest.ini  repomix.config.json  requirements-s8.txt  run_benchmarks.sh  run_contamination_detection.sh
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  experimental_scripts_analysis.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
alembic/: env.py
alembic/versions/: 20250823_1202_d3eed3dec223_initial_schema.py
configs/: default.yaml  scaling_survey.yaml  smoke.yaml
configs/evaluation/: basic_example.yaml  comprehensive_example.yaml  contamination_detection_gemma3_4b.yaml  ollama_gemma3_4b_test.yaml  ollama_gemma_test.yaml  ollama_gemma_test_unified.yaml  ollama_gpt_oss_20b_test.yaml  ollama_preliminary.yaml  ollama_quick_test.yaml  quick_test.yaml
configs/examples/: development.yaml  longcontext_benchmark.yaml  translation_benchmark.yaml
docs/: Makefile  ORM_GUIDE.md  conf.py  contamination_visualization.md  index.rst
docs/about/: changelog.rst  citation.rst  license.rst
docs/api/: cli.rst  core.rst  evaluation.rst  llm.rst  longcontext.rst  translation.rst  utils.rst
docs/development/: architecture.rst  contributing.rst  testing.rst
docs/examples/: advanced_usage.rst  basic_usage.rst  configuration_examples.rst  custom_integration.rst  notebooks.rst
docs/guides/: CLI_GUIDE.md  CLI_REFACTOR_SUMMARY.md  CONTAMINATION_DETECTION_GUIDE.md  EVALUATION_GUIDE.md  MIGRATION_GUIDE.md  OLLAMA_SETUP.md  PUBLICATION_VISUALIZATION_GUIDE.md  README_S8_SETUP.md  SCRIPT_MIGRATION_GUIDE.md  VISUALIZATION_USAGE_GUIDE.md
docs/implementation/: BENCHMARK_FILES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ORM_IMPLEMENTATION_SUMMARY.md  REFACTORING_PLAN.md  S8_IMPLEMENTATION_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  UNIFIED_CI_MIGRATION_SUMMARY.md  language_dependency_findings_summary.md
docs/research/: ACADEMIC_PAPER_OUTLINE.md  CUSTOM_BENCHMARKING.md  EXPERIMENT_TRACKING_README.md  FINAL_LANGUAGE_DEPENDENCY_ANALYSIS.md  LANGUAGE_DEPENDENCY_ATLAS_README.md  README_DOCS.md  S8_ANALYSIS_README.md  S8_QUICK_START.md  SYSTEM_OVERVIEW.md  complete_dictionary_analysis.md  formal_methodology.md  paper_draft_introduction_methodology.md
docs/tutorials/: batch_evaluation.rst  configuration_examples.rst  custom_models.rst  long_context_benchmarks.rst  translation_benchmarks.rst
docs/user_guide/: cli_guide.rst  configuration.rst  evaluation_pipeline.rst  installation.rst  quickstart.rst
examples/: cli_demo.py  evaluation_demo.py  orm_usage_example.py
research_dashboard/: index.html
research_dashboard/styles/: academic.css  dashboard.css
schema/: README.md  example_queries.sql  language_dependency_atlas.sql
scripts/: build_docs.sh  release.py  run_smoke_test_DEPRECATED.md  setup-dev.sh
src/scramblebench/: __init__.py  cli.py
src/scramblebench/analysis/: __init__.py  academic_export.py  bootstrap_inference.py  colorblind_checker.py  model_comparison.py  publication_visualizer.py  statistical_models.py
src/scramblebench/core/: __init__.py  adapters.py  benchmark.py  config.py  cost_estimator.py  data_extractors.py  database.py  db_config.py  evaluator.py  exceptions.py  init.py  logging.py  metrics_computer.py  models.py  performance.py  reporter.py  repository.py  runner.py  scaling_survey.py  smoke_tests.py  unified_config.py  validation.py
src/scramblebench/dashboard/: README.md  __init__.py  app.py  config.py
src/scramblebench/db/: __init__.py  models.py  repository.py  session.py
src/scramblebench/llm/: __init__.py  (+4 more)
tests/: __init__.py  test_cli.py  test_cli_comprehensive.py  test_integration.py  test_paraphrase_pipeline.py
tests/test_analysis/: conftest.py  test_academic_export.py  test_bootstrap_inference.py  test_model_comparison.py  test_publication_visualizer.py  test_statistical_models.py
tests/test_core/: test_benchmark.py  test_config.py  test_data_extractors.py  test_metrics_computer.py
tests/test_db/: __init__.py  conftest.py  test_models.py  test_repository.py  test_session.py
tests/test_evaluation/: __init__.py  test_evaluation_pipeline.py  test_runner.py
tests/test_experiment_tracking/: __init__.py  conftest.py  test_core.py  test_queue.py  test_statistics.py
tests/test_llm/: __init__.py  test_model_adapter.py  test_model_interface.py  test_openrouter_client.py
tests/test_longcontext/: __init__.py  test_benchmark.py  test_document_transformer.py
tests/test_translation/: __init__.py  test_benchmark.py  test_language_generator.py
visualizations/: VISUALIZATION_GUIDE.md
(+38 files in other folders)
